Fix: Update CORS configuration to use environment variables from Railway